2012-06-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php,
	operation/agentes/estado_ultimopaquete.php,
	operation/agentes/ver_agente.php,
	godmode/agentes/manage_config_remote.php: cleaned source code from
	merge some cosmetic changes in the trunk and this branch.

2012-06-13  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/module_manage_editor_common.php: Disable button
	'disabled' when a module is linked to a policy.

2012-06-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php, include/functions_reporting.php,
	include/functions_groups.php, include/functions_visual_map.php,
	include/functions_config.php, include/ajax/reporting.ajax.php,
	include/functions_ui.php, include/functions.php,
	extensions/agents_modules.php, extensions/module_groups.php,
	operation/incidents/incident.php,
	operation/incidents/incident_detail.php,
	operation/agentes/status_monitor.php,
	operation/agentes/estado_generalagente.php,
	operation/agentes/estado_agente.php,
	operation/agentes/ver_agente.php,
	operation/snmpconsole/snmp_view.php,
	operation/integria_incidents/incident.incident.php,
	operation/integria_incidents/incident.php,
	operation/events/events_list.php,
	mobile/operation/agents/monitor_status.php,
	mobile/operation/agents/view_agents.php,
	mobile/operation/agents/view_alerts.php,
	mobile/operation/events/events.php,
	godmode/groups/modu_group_list.php, godmode/groups/group_list.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/configurar_agente.php,
	godmode/alerts/alert_list.list.php, godmode/setup/os.list.php,
	godmode/setup/setup.php, godmode/users/configure_user.php,
	godmode/modules/manage_network_templates.php,
	godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/visual_console_builder.elements.php,
	godmode/tag/tag.php: a lot of fixes in relation with entities and
	clean source code style.

2012-06-13 Vanessa Gil <vanessa.gil@artica.es>
	